use simplified dtos from BE
