# swagger.json
@@ -176,17 +176,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/DeliveryDto"
+                  "$ref": "#/components/schemas/DeliveryDetailsDto"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/DeliveryDto"
+                  "$ref": "#/components/schemas/DeliveryDetailsDto"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/DeliveryDto"
+                  "$ref": "#/components/schemas/DeliveryDetailsDto"
                 }
               }
             }
@@ -663,33 +663,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/VendorDto"
-                  }
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/VendorDto"
-                  }
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/VendorDto"
-                  }
-                }
-              }
-            }
+            "description": "Success"
           },
           "400": {
             "description": "Bad Request",
@@ -4394,7 +4368,7 @@
         },
         "additionalProperties": false
       },
-      "DeliveryDto": {
+      "DeliveryDetailsDto": {
         "type": "object",
         "properties": {
           "id": {
@@ -4470,8 +4444,67 @@
           "entries": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/EntryDto"
+              "$ref": "#/components/schemas/DeliveryEntryDetailsDto"
             },
+            "nullable": true
+          },
+          "markers": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/DeliveryMarkerDto"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "DeliveryDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "systemNumber": {
+            "type": "string",
+            "nullable": true
+          },
+          "receptionNumber": {
+            "type": "string",
+            "nullable": true
+          },
+          "deliveryTime": {
+            "type": "string",
+            "nullable": true
+          },
+          "approvedOn": {
+            "type": "string",
+            "nullable": true
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "entriesWaitingProcessing": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "entriesFinishedProcessing": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "entriesWaitingProcessingDetails": {
+            "$ref": "#/components/schemas/EntriesProcessingDetails"
+          },
+          "entriesFinishedProcessingDetails": {
+            "$ref": "#/components/schemas/EntriesProcessingDetails"
+          },
+          "vendorName": {
+            "type": "string",
+            "nullable": true
+          },
+          "status": {
+            "type": "string",
             "nullable": true
           },
           "markers": {
@@ -4503,6 +4536,42 @@
           },
           "hasNext": {
             "type": "boolean"
+          }
+        },
+        "additionalProperties": false
+      },
+      "DeliveryEntryDetailsDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "pallets": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "packages": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "pieces": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "startedProccessing": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "finishedProccessing": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "zoneName": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -5232,7 +5301,7 @@
           "markers": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/VendorMarkerDto"
+              "type": "string"
             },
             "nullable": true
           }
@@ -5330,7 +5399,7 @@
           "markers": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/ZoneMarkerDto"
+              "type": "string"
             },
             "nullable": true
           }
